--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "bitburner-typescript-template",
-  "version": "1.0.0",
-  "scripts": {
-    "transpile": "npx tsc -w",
-    "watch": "npx bitburner-filesync"
-  },
-  "author": "hydroflame, Hoekstraa, based on work by SlyCedix",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "bitburner-filesync": "^1.0.0",
-    "eslint": "^8.22.0",
-    "typescript": "^4.7.4"
-  }
+    "name": "sugardave-bitburner-scripts",
+    "version": "0.0.1",
+    "scripts": {
+        "transpile": "npx tsc -w",
+        "sync": "npx bitburner-filesync",
+        "burn": "run-p transpile sync"
+    },
+    "author": "Dave Freeman <sugardave@gmail.com> (https://github.com/sugardave)",
+    "license": "UNLICENSED",
+    "private": true,
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.35.1",
+        "@typescript-eslint/parser": "^5.35.1",
+        "bitburner-filesync": "^1.0.0",
+        "eslint": "^8.22.0",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.7.1",
+        "typescript": "^4.7.4"
+    }
 }
