add starter set of basic utilities: scan, map, pwn
commit 44c993bf411d25b31087d0c0afae1441b894c86b
Author: Dave Freeman <sugardave@gmail.com>
Date:   Sat Sep 24 06:29:47 2022 -0500

    add autoPwn script

    for use with omniscan

commit 8344c7861df989d770ed88f4bf30f9dcddce6407
Author: Dave Freeman <sugardave@gmail.com>
Date:   Sat Sep 24 06:29:07 2022 -0500

    add basic pwn script

    simple usage against single target

commit 0f09b9cb96a490695cd8c0e01fb6a81aba4a539a
Author: Dave Freeman <sugardave@gmail.com>
Date:   Mon Sep 12 01:12:29 2022 -0500

    add mapping utility

    for use with omniscan

commit dd21a12ff6660a01d76ec43c97069c92f82b2bc1
Author: Dave Freeman <sugardave@gmail.com>
Date:   Mon Sep 12 01:09:58 2022 -0500

    ignore .nvmrc file

commit f1242a2e129906c5fdf22c11067327456bc22398
Author: Dave Freeman <sugardave@gmail.com>
Date:   Thu Sep 8 03:05:42 2022 -0500

    add omniscan utility

commit 5775760424106f03d4f367055ebac8938a303ba1
Author: Dave Freeman <sugardave@gmail.com>
Date:   Thu Sep 8 01:48:40 2022 -0500

    eliminate superfluous commas

commit 4d7e9e89a796beb894190e197e4cc0ce986b7b8c
Author: Dave Freeman <sugardave@gmail.com>
Date:   Wed Sep 7 02:49:28 2022 -0500

    add wipeout utility

    When you want a clean home...

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -15,7 +15,7 @@
     "singleAttributePerLine": true,
     "singleQuote": true,
     "tabWidth": 4,
-    "trailingComma": "es5",
+    "trailingComma": "none",
     "useTabs": false,
     "vueIndentScriptAndStyle": true
 }
