--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "include": ["NetscriptDefinitions.d.ts", "src/**/*"],
+    "exclude": ["src/**/*.d.ts"],
     "compilerOptions": {
         "forceConsistentCasingInFileNames": true,
-        "module": "esnext",
-        "target": "esnext",
+        "module": "ESNext",
+        "target": "ESNext",
         "moduleResolution": "node",
         "noImplicitReturns": true,
         "noImplicitThis": true,
