add scripts: discovery, hacking, housekeeping, etc
commit c5452bb78d41ab85b1ce3cd0a744d7486bba8b3a
Author: Dave Freeman <sugardave@gmail.com>
Date:   Sun Sep 25 03:41:01 2022 -0500

    add basic weaken/grow/hack script

    commit 6d8ff712b380441f70b965cc6a8353256ac8ab89
    Author: Dave Freeman <sugardave@gmail.com>
    Date:   Sun Sep 25 01:59:22 2022 -0500

        make base pwn script a skosh more readable. maybe.

    commit 748a3f477eacb00ca0dc48d197e34f023dbccc61
    Author: Dave Freeman <sugardave@gmail.com>
    Date:   Sun Sep 25 01:35:54 2022 -0500

        add all-in-one hacking script starting point

        modified from early-hack-template from Bitburner docs; does not include
        nuking (that is handled in the pwn/autoPwn scripts)

commit 5045fa2eec16bdfdddbd561641685d777cdc9bc1
Author: Dave Freeman <sugardave@gmail.com>
Date:   Sat Sep 24 06:31:42 2022 -0500

    add starter set of basic utilities: scan, map, pwn

    commit 44c993bf411d25b31087d0c0afae1441b894c86b
    Author: Dave Freeman <sugardave@gmail.com>
    Date:   Sat Sep 24 06:29:47 2022 -0500

        add autoPwn script

        for use with omniscan

    commit 8344c7861df989d770ed88f4bf30f9dcddce6407
    Author: Dave Freeman <sugardave@gmail.com>
    Date:   Sat Sep 24 06:29:07 2022 -0500

        add basic pwn script

        simple usage against single target

    commit 0f09b9cb96a490695cd8c0e01fb6a81aba4a539a
    Author: Dave Freeman <sugardave@gmail.com>
    Date:   Mon Sep 12 01:12:29 2022 -0500

        add mapping utility

        for use with omniscan

    commit dd21a12ff6660a01d76ec43c97069c92f82b2bc1
    Author: Dave Freeman <sugardave@gmail.com>
    Date:   Mon Sep 12 01:09:58 2022 -0500

        ignore .nvmrc file

    commit f1242a2e129906c5fdf22c11067327456bc22398
    Author: Dave Freeman <sugardave@gmail.com>
    Date:   Thu Sep 8 03:05:42 2022 -0500

        add omniscan utility

    commit 5775760424106f03d4f367055ebac8938a303ba1
    Author: Dave Freeman <sugardav

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,22 @@
 {
-  "include": ["NetscriptDefinitions.d.ts", "src/**/*"],
-  "compilerOptions": {
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "node",
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "esModuleInterop": true,
-    "inlineSourceMap": true,
-    "strict": true,
-    "rootDir": "src/",
-    "outDir": "dist/",
-    "baseUrl": "src/",
-    "paths": {
-      "/*": ["*"],
-      "@ns": ["../NetscriptDefinitions.d.ts"]
+    "include": ["NetscriptDefinitions.d.ts", "src/**/*"],
+    "exclude": ["src/**/*.d.ts"],
+    "compilerOptions": {
+        "forceConsistentCasingInFileNames": true,
+        "module": "ESNext",
+        "target": "ESNext",
+        "moduleResolution": "node",
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "esModuleInterop": true,
+        "inlineSourceMap": true,
+        "strict": true,
+        "rootDir": "src/",
+        "outDir": "dist/",
+        "baseUrl": "src/",
+        "paths": {
+            "/*": ["*"],
+            "@ns": ["../NetscriptDefinitions.d.ts"]
+        }
     }
-  }
 }
