--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "author": "Dave Freeman <sugardave@gmail.com> (https://github.com/sugardave)",
     "license": "UNLICENSED",
     "private": true,
+    "dependencies": {
+        "bitburner-filesync": "^1.0.0",
+        "npm-run-all": "^4.1.5"
+    },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.35.1",
         "@typescript-eslint/parser": "^5.35.1",
-        "bitburner-filesync": "^1.0.0",
         "eslint": "^8.22.0",
-        "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
         "typescript": "^4.7.4"
     }
