--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
     "version": "0.0.1",
     "scripts": {
         "transpile": "npx tsc -w",
-        "sync": "npx bitburner-filesync",
-        "burn": "run-p transpile sync"
+        "sync": "npx bitburner-filesync"
     },
     "author": "Dave Freeman <sugardave@gmail.com> (https://github.com/sugardave)",
     "license": "UNLICENSED",
     "private": true,
     "dependencies": {
-        "bitburner-filesync": "^1.0.0",
-        "npm-run-all": "^4.1.5"
+        "bitburner-filesync": "^1.0.0"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.35.1",
